--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,107 +1,66 @@
-$lightest-color: #ffffff;
-$light-color: #d3d3d3;
-$darkest-color: #161a1d;
-$accent: #ffc24b;
-
-$primary-font: 'Montserrat', sans-serif;
-$secondary-font: 'Open Sans', sans-serif;
-
+@import 'config';
+@import 'global';
+@import 'buttons';
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
-}
-
-body {
-    background-color: $darkest-color;
-    font-family: $secondary-font;
-}
-
-h1 {
-    color: $accent;
-    font-size: 7rem;
-    font-weight: bold;
-    font-family: $primary-font;
-    text-transform: uppercase;
-    line-height: .7;
-
 }
 
 
-h2, h3, h4 {
-    color: $light-color;
-    text-transform: uppercase;
+.logo {
+    letter-spacing: 5px;
 }
 
-
-h2 {
-    font-size: 4rem;
-}
-
-
-h3 {
-    font-size: 3rem;
-}
-
-
-h4 {
-    font-size: 1.8rem;
-}
-
-
-p {
-    color: $lightest-color;
-    font-size: 1.4rem;
-
-}
-
-img {
-    width: 100%;
-}
-
-a {
-    text-decoration: none;
-    color: $lightest-color;
-}
 .showcase {
     height: 100vh;
-
+    
     nav {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin: 5px 10px;
 
-        ul {
-            display: flex;
-            list-style: none;
+        li {
+            padding: 15px;
 
-            li {
-                padding: 15px;
+            a {
+                color: $light-color;
             }
+            
         }
 
-        a:hover {
+        .hovered{
             color: $accent;
         }
+
     }
+
+
+    a:hover,
+    .hovered {
+        color: $accent;
+    }
+
 }
 
-.showcase-content {
-    text-align: center;
-}
 
 .container {
     max-width: 1300px;
     padding: 0 30px;
     margin: 0 auto;
     overflow: auto;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    
 }
 
 
 .title {
-    margin-bottom: 150px;
+    margin-bottom: 100px;
     padding: 20px;
     text-align: left;
 }
@@ -117,13 +76,14 @@ a {
     justify-content: space-between;
     width: 70%;
     margin: 50px auto;
-    gap: 10px;
+    gap: 8px;
 
     a {
-        border: 1px solid green;
-        padding: 10px 20px;
-        width: calc(33% - 10px);
+        padding: 8px 20px;
+        width: calc(33% - 8px);
         border: 1px solid $lightest-color;
+        margin-bottom: 8px;
+        text-transform: capitalize;
     }
 
     a:hover {
@@ -137,3 +97,4 @@ a {
     }
 
 }
+
