--- a/SCSS/_global.scss
+++ b/SCSS/_global.scss
@@ -1,7 +1,7 @@
 
 
 body {
-    background-color: $darkest-color;
+    background-color: lighten($darkest-color, 5%);
     font-family: $secondary-font;
 }
 
@@ -23,7 +23,7 @@ h2, h3, h4, h5 {
 
 
 h2 {
-    font-size: 4rem;
+    font-size: 4.5rem;
 }
 
 
@@ -43,7 +43,7 @@ h5 {
 
 p {
     color: $lightest-color;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 
 }
 
@@ -54,4 +54,9 @@ img {
 a {
     text-decoration: none;
     color: $lightest-color;
+}
+
+
+section {
+    margin: 150px 0;
 }
