--- a/SCSS/_global.scss
+++ b/SCSS/_global.scss
@@ -1,7 +1,7 @@
 
 
 body {
-    background-color: lighten($darkest-color, 5%);
+    background-color: $darkest-color;
     font-family: $secondary-font;
 }
 
@@ -19,21 +19,24 @@ h1 {
 h2, h3, h4, h5 {
     color: $lightest-color;
     text-transform: uppercase;
+
 }
 
 
 h2 {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
 }
 
 
 h3 {
-    font-size: 3rem;
+    font-size: 2.5rem;
+    line-height: 40px;
 }
 
 
 h4 {
     font-size: 1.5rem;
+    line-height: 40px;
 }
 
 h5 {
@@ -43,7 +46,7 @@ h5 {
 
 p {
     color: $lightest-color;
-    font-size: 1.2rem;
+    line-height: 20px;
 
 }
 
@@ -56,7 +59,14 @@ a {
     color: $lightest-color;
 }
 
+.container {
+    max-width: 1000px;
+}
 
-section {
-    margin: 150px 0;
+
+
+.gallery .card {
+    border: none;
+    background-color: $darkest-color;
+
 }
