--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,6 +1,7 @@
 @import 'config';
 @import 'global';
 @import 'buttons';
+@import 'media_queries';
 
 * {
     box-sizing: border-box;
@@ -17,15 +18,11 @@
 .nav-link {
     color: $light-color;
 
-    &:hover{
+    &:hover {
         color: $accent;
             
         }
 }
-
-
-
-
 
 
 .title {
@@ -39,49 +36,22 @@
 }
 
 
-.btns-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 70%;
-    margin: 50px auto;
-    gap: 8px;
+.services .card {
+    background-color: $darkest-color;
 
-    a {
-        padding: 8px 20px;
-        width: calc(33% - 8px);
-        border: 1px solid $lightest-color;
-        margin-bottom: 8px;
-        text-transform: capitalize;
-        background-color: $darkest-color;
-
+        a {
+            border-bottom: 1px solid $lightest-color;
+        
         &:hover {
-            background-color: $lightest-color;
-            color: $darkest-color;
-            
+            color: $lightest-color;
         }
     }
 }
 
-
-.box {
-    background-color: $lightest-color;
-
-    p,
-    h3 {
-    color: $darkest-color;
-    
-    }
-
+.gallery {
+    margin: 100px 0;
 }
 
-.box-img {
-    width: 100%;
-    height: 350px;
-    background-color: #e8c2ca;
-}
-
-.highlight {
-    background-color: $accent;
-    width: 50%;
+.info p {
+    line-height: 40px;
 }
